<resources>
    <string name="app_name">Warships</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_while_creating_user">Something went wrong =(</string>
    <string name="error_while_login">Wrong user name or password</string>
    <string name="error_passwords_are_not_equal">Passwords have to be equal!</string>
    <string name="settings_nav_title">Settings</string>
    <string name="play_button_label">Play</string>
    <string name="settings_main_screen_label">Current Settings</string>
    <string name="stat_main_screen_label">Current Winrate</string>
    <string name="player_greetings">Welcome, %s</string>
    <string name="settings_ships_number_label">Ships Number</string>
    <string name="settings_name_label">Configuration Name</string>
    <string name="ships_size_header">Ships</string>
    <string name="main_screen_nav_label">Main</string>
    <string name="settings_shoots_number_label">Shoots Number</string>
    <string name="setting_select_config_label">Select Setting</string>
    <string name="set_current_settings_button_label">Set as Current</string>
    <string name="settings_name_duplicate_error">Settings with such name already exists</string>
    <string name="surrender_button_label">Surrender</string>
    <string name="no_current_settings_message">Choose settings!</string>
    <string name="exit_hint">Press back again to quit.</string>
    <string name="stat_fragment_damage_label" >Damage</string>
    <string name="stat_fragment_moves_left_label">Moves Left</string>
    <string name="stat_fragment_ships_left_label">Ships Left</string>
    <string name="stat_fragment_moves_label">Moves</string>
    <string name="statistics_screen_nav_label">Statistics</string>
</resources>
