<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.MainScreenFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:id="@+id/player_greetings_label" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_media_play"
            android:id="@+id/play_button"
            android:elevation="0dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_play_button_label"
            android:text="@string/play_button_label"
            android:layout_below="@+id/play_button"
            android:layout_centerHorizontal="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/text_play_button_label">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/stat_main_screen_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/current_winrate_label"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/current_settings_label" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/current_settings_label"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:text="@string/settings_main_screen_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView15"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </RelativeLayout>
</FrameLayout>
